Efmub-Ogy/src/objects/Airline_Code__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Airline Codes</description>
    <fields>
        <fullName>Callsign__c</fullName>
        <label>Callsign</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_Code__c</fullName>
        <externalId>true</externalId>
        <label>IATA Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ICAO_Code__c</fullName>
        <label>ICAO Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Airline Code</label>
</CustomObject>